objects/Service_Order_Communication__c.object
<CustomObject>
    <description>This object is used to track the service order communication history that is being sent as part of CSSNA automated communication initiative.</description>
    <fields>
        <fullName>Account_Lang_Pref_Code__c</fullName>
        <label>Account Lang Pref Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Date_and_Time__c</fullName>
        <label>Communication Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Communication_Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_SMS_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Trigger_Name__c</fullName>
        <label>Communication Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <formula>IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Manual Communication&quot;), &quot;Manual Communication&quot;,
IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Automated Communication&quot;) , &quot;Automated Communication&quot;,
IF(ISPICKVAL( Service_Order__r.Communication_Type__c , &quot;Custom Communication&quot;) , &quot;Custom Communication&quot;,
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Message__c</fullName>
        <description>This field contains the text which was entered by Advanced user manually.</description>
        <label>Custom Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_CSSP_Registration__c</fullName>
        <formula>Service_Order__r.Asset.Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_CSSP_ServiceTeam_Contact__c</fullName>
        <formula>Service_Order__r.Service_Team_Contact__r.FSL_CSSP_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-mail for Service Team Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Service_Status__c</fullName>
        <formula>TEXT(Service_Order__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_An_Email_To_STC__c</fullName>
        <label>Forward An Email To STC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang_Pref_Codes__c</fullName>
        <inlineHelpText>It will get the language preference code from Contact and Account using Apex Util class</inlineHelpText>
        <label>Lang Pref Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>This field will be saving the language preference of the user.</description>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Getting the value of the National Account field from contact.</description>
        <label>National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Body__c</fullName>
        <label>Notification Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Unique_Id__c</fullName>
        <label>Notification Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <label>Product Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STC_Email__c</fullName>
        <label>STC Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_App_Name__c</fullName>
        <label>Sent From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>Service_Order_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <label>Service Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sms_Multiple_Phone_Numbers__c</fullName>
        <label>Sms Multiple Phone Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email_Address__c</fullName>
        <label>Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email_Bcc_Address__c</fullName>
        <label>Target Email Bcc Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Email_Cc_Address__c</fullName>
        <label>Target Email Cc Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Phone_Number__c</fullName>
        <label>Mobile phone number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Communications</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Communication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>